Click on status author sends to that user profile.  Moment js for nice date display.

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -15,3 +15,9 @@ body {
 .navbar-default {
     border-color: #e4e4e4;
 }
+
+.status-user-link {
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 20px;
+}
