--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -58,3 +58,13 @@ body {
 .fl {
     float: left;
 }
+
+.fs28 {
+    font-size: 50px;
+}
+
+.foll-data {
+    font-size: 24px;
+    color: gray;
+    padding-right: 5%;
+}
